[gd_scene load_steps=46 format=3 uid="uid://bi8tfwgcrnhf0"]

[ext_resource type="Script" path="res://mobs/orc/orc.gd" id="1_2rg78"]
[ext_resource type="Texture2D" uid="uid://da3ilrqrg0dx4" path="res://assets/orc_left.png" id="3_84bbd"]
[ext_resource type="Texture2D" uid="uid://b2ukjewnwoctt" path="res://assets/Orc.png" id="3_j6e8c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mtncb"]
atlas = ExtResource("3_84bbd")
region = Rect2(700, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mepp"]
atlas = ExtResource("3_84bbd")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfaqi"]
atlas = ExtResource("3_84bbd")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt1gb"]
atlas = ExtResource("3_84bbd")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3n3h"]
atlas = ExtResource("3_84bbd")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2xy8"]
atlas = ExtResource("3_84bbd")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2pvb"]
atlas = ExtResource("3_j6e8c")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcjsc"]
atlas = ExtResource("3_j6e8c")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8ofd"]
atlas = ExtResource("3_j6e8c")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgk85"]
atlas = ExtResource("3_j6e8c")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5r3l"]
atlas = ExtResource("3_j6e8c")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_66dal"]
atlas = ExtResource("3_j6e8c")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1xd0"]
atlas = ExtResource("3_j6e8c")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn5ob"]
atlas = ExtResource("3_j6e8c")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wgn0"]
atlas = ExtResource("3_j6e8c")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrulj"]
atlas = ExtResource("3_j6e8c")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8rht"]
atlas = ExtResource("3_j6e8c")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv5qo"]
atlas = ExtResource("3_j6e8c")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1indg"]
atlas = ExtResource("3_j6e8c")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pp7d"]
atlas = ExtResource("3_j6e8c")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bseck"]
atlas = ExtResource("3_j6e8c")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrwvd"]
atlas = ExtResource("3_j6e8c")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_irkpq"]
atlas = ExtResource("3_84bbd")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwd13"]
atlas = ExtResource("3_84bbd")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qe6w"]
atlas = ExtResource("3_84bbd")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkr3r"]
atlas = ExtResource("3_84bbd")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro0eo"]
atlas = ExtResource("3_84bbd")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxwjs"]
atlas = ExtResource("3_84bbd")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5ohv"]
atlas = ExtResource("3_84bbd")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_on4sl"]
atlas = ExtResource("3_84bbd")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsv2u"]
atlas = ExtResource("3_j6e8c")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_itn48"]
atlas = ExtResource("3_j6e8c")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmlrt"]
atlas = ExtResource("3_j6e8c")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q1sv"]
atlas = ExtResource("3_j6e8c")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i442s"]
atlas = ExtResource("3_j6e8c")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp4vw"]
atlas = ExtResource("3_j6e8c")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkvjf"]
atlas = ExtResource("3_j6e8c")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0ep6"]
atlas = ExtResource("3_j6e8c")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_okjmv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtncb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mepp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfaqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt1gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3n3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2xy8")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2pvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcjsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8ofd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgk85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5r3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66dal")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1xd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn5ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wgn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrulj")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8rht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv5qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1indg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pp7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bseck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrwvd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irkpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwd13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qe6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkr3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro0eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxwjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5ohv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on4sl")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsv2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itn48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmlrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q1sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i442s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp4vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkvjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0ep6")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nk6ds"]
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vlvwu"]
radius = 267.187

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgq5d"]
size = Vector2(18, 23)

[node name="orc" type="CharacterBody2D" groups=["Orcs"]]
collision_layer = 16
collision_mask = 15
script = ExtResource("1_2rg78")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -0.5)
scale = Vector2(1.688, 1.744)
sprite_frames = SubResource("SpriteFrames_okjmv")
animation = &"death"
autoplay = "death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nk6ds")

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_vlvwu")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_dgq5d")

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="damage" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="damage" to="." method="_on_damage_body_entered"]
[connection signal="body_exited" from="damage" to="." method="_on_detector_body_exited"]
